GUI cleanup. Made separate pages: one for NBA lineups (to be used for now) and one for NFL (to be used later)

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectLineup"></activity>
+        <activity android:name=".SelectLineup_NBA"></activity>
         <activity android:name=".ChooseSport" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ChooseSite">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
