--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectLineup_NBA"></activity>
+        <activity android:name=".FD_SelectLineup_NBA"></activity>
         <activity android:name=".ChooseSport" />
         <activity android:name=".ChooseSite">
             <intent-filter>
