Updated "choose sport" page to only allow one sport at a time. "Choose sport" is now the first page. Started on list of players capabilities

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".FD_SelectLineup_NBA"></activity>
-        <activity android:name=".ChooseSport" />
-        <activity android:name=".ChooseSite">
+        <activity android:name=".ChooseSite" />
+        <activity android:name=".ChooseSport">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
