Added ListPlayers class where our list of players will be held. Also made sure to check if FanDuel or DraftKings was chosen before showing lineup page (since they will be different based on which site the user chooses)

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ListPlayers"></activity>
         <activity android:name=".FD_SelectLineup_NBA"></activity>
         <activity android:name=".ChooseSite" />
         <activity android:name=".ChooseSport">
