--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ListPlayers"></activity>
         <activity android:name=".FD_SelectLineup_NBA"></activity>
-        <activity android:name=".ChooseSite" />
-        <activity android:name=".ChooseSport">
+        <activity android:name=".ChooseSport" />
+        <activity android:name=".ChooseSite">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
