Made Login page first now.

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Login"></activity>
+        <activity android:name=".ChooseSite"></activity>
         <activity android:name=".Register" />
         <activity android:name=".HttpConnect" />
         <activity android:name=".ListPlayers" />
         <activity android:name=".FD_SelectLineup_NBA" />
         <activity android:name=".ChooseSport" />
-        <activity android:name=".ChooseSite">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
