--- a/DFOptimizerApp/build.gradle
+++ b/DFOptimizerApp/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         classpath "com.chaquo.python:gradle:8.0.1"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.google.gms:google-services:4.3.4'
-
+        classpath 'com.google.gms:google-services:latest-version'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
