Changed name of ListPlayers to ListPlayers_NBA to differentiate between NBA and NFL. Deleted unused files.

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity android:name=".ChooseSite"></activity>
         <activity android:name=".Register" />
         <activity android:name=".HttpConnect" />
-        <activity android:name=".ListPlayers" />
-        <activity android:name=".FD_SelectLineup_NBA" />
+        <activity android:name=".ListPlayers_NBA" />
         <activity android:name=".ChooseSport" />
         <activity android:name=".Login">
             <intent-filter>
