Added MLB front-end functionality. MLB URL may not be correct though (need to check)

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         <activity android:name=".ChooseSite"/>
         <activity android:name=".Register" />
         <activity android:name=".HttpConnect" />
-        <activity android:name=".ListPlayers" />
+        <activity android:name=".ListPlayers_NBA"/>
+        <activity android:name=".ListPlayers_MLB"/>
+        <activity android:name=".ListPlayers_NFL" />
         <activity android:name=".ChooseSport" />
     </application>
 
