--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeScreen"/>
         <activity android:name=".ChooseSite"/>
         <activity android:name=".Register" />
         <activity android:name=".HttpConnect" />
