--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".HomeScreen"/>
         <activity android:name=".ChooseSite"/>
         <activity android:name=".Register" />
-        <activity android:name=".HttpConnect" />
+        <activity android:name=".DisplayLineups" />
         <activity android:name=".ListPlayers_NBA"/>
         <activity android:name=".ListPlayers_MLB"/>
         <activity android:name=".ListPlayers_NFL" />
