Consolidated all the sports into one list players page (the only difference is the dropdown menu)

--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".DisplayLineups" />
         <activity android:name=".ListPlayers_NBA"/>
         <activity android:name=".ListPlayers_MLB"/>
-        <activity android:name=".ListPlayers_NFL" />
+        <activity android:name=".ListPlayers" />
         <activity android:name=".ChooseSport" />
     </application>
 
