--- a/DFOptimizerApp/app/src/main/AndroidManifest.xml
+++ b/DFOptimizerApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".SavedLineups"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeScreen"/>
-        <activity android:name=".ChooseSite"/>
+        <activity android:name=".HomeScreen" />
+        <activity android:name=".ChooseSite" />
         <activity android:name=".Register" />
         <activity android:name=".DisplayLineups" />
-        <activity android:name=".ListPlayers_NBA"/>
-        <activity android:name=".ListPlayers_MLB"/>
+        <activity android:name=".ListPlayers_NBA" />
+        <activity android:name=".ListPlayers_MLB" />
         <activity android:name=".ListPlayers" />
         <activity android:name=".ChooseSport" />
     </application>
